Document building, testing, and the dependency state in the runbook
Adds three sections and several gotchas covering what the recent build,
test, and dependency-modernization work established: the dependency-
order build via cedarcli and the SIGPIPE-through-head trap; backend-free
testing with the embedded backends and in-memory auth, the 19xxx test
port range, the CedarEnvironmentSource override, JUnit 5 with
DropwizardTestSupport, and the redeploy-plus-smoke discipline; and the
current framework baseline, the Java-17 and server-version locks, the
networknt validator with its format-compatibility shim, and the pending
jakarta jump with its sundial blocker.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>