@@ -191,6 +191,31 @@ default): `demo.cee` 4260, `docs.cee` 4280, `cee-dev` 4400.
   (Seen on `repo` in this environment.) Different from the case above: the jar exists, it just isn't
   a runnable artifact.
 
+- **A Maven build "succeeds" but a later step behaves as if code never changed** → the build was
+  piped through `head` or `grep -m`. When the reader closes early, the writing `mvn` takes SIGPIPE
+  and can die mid-reactor while the shell still reports a clean exit. Never pipe `mvn` through a
+  reader that can exit early. Redirect the full output to a file and grep the file afterward.
+
+- **A test fails with `Failed to bind to 0.0.0.0:90xx` while the dev stack is up** → that test boots
+  its server on a real dev port instead of the alternate `19xxx` test range. Every booted test must
+  redirect its ports through `CedarEnvironmentSource.setOverride(...)` to the `19xxx` range (test
+  port = dev port + 10000), so a running dev stack and a test run never collide. Give the offending
+  test the same static-block redirect the other servers' tests use.
+
+- **`UnitOfWorkAwareProxyFactory` or other startup code fails only in a non-interactive shell** →
+  that shell did not pin `JAVA_HOME` to 17 (the zsh pin is interactive-only), so the build or run
+  used the machine default JDK 23/25. Export `JAVA_HOME=$(/usr/libexec/java_home -v 17)` explicitly
+  in scripts and background commands. The helper scripts here already do this.
+
+- **A server rebuilt against a stale `cedar-parent` misbehaves subtly** (for example an unshaded jar
+  with no `Main-Class`, or an old managed dependency version) → `cedar-parent` was not installed
+  before the server was built. Always build in dependency order: `cedar-parent` first, then
+  `cedar-microservice-libraries`, then the servers. `cedarcli build java` does this for you.
+
+- **The bridge server reads `UNHEALTHY` for a minute or two after start, then goes healthy** →
+  normal. Its real `CompTox` health check reports "registry not loaded yet" during an asynchronous
+  warm-up. Wait for `curl -sk http://localhost:9115/healthcheck` to show `"comp-tox":{"healthy":true`.
+
 ## cedarcli (headless invocation)
 
 `cedarcli` is a shell alias (`source $CEDAR_HOME/cedar-cli/cli.sh`) that activates a venv and runs
@@ -207,6 +232,99 @@ Command groups: `docker` (one-time-setup / start / stop), `start` (all/infra/mic
 `stop`, `build`, `deploy`, `status`, `check`, `cert`, `dev`. On macOS `start` uses AppleScript to open
 Terminal tabs (`use_osa = platform.system()=='Darwin'`), which is why headless bring-up uses the
 underlying `services-generic/*.sh` scripts or `cedar-services.sh` instead.
+
+## Building CEDAR
+
+`cedarcli build java` is the authoritative full build. It compiles and installs the whole Java
+stack in dependency order: `cedar-parent`, then `cedar-microservice-libraries`, then the fifteen
+servers. Inside a single repo, `cedarcli build this` builds just that repo. Both need the profile
+sourced and `JAVA_HOME` pinned to 17.
+
+Order is not optional. A server compiled against a stale `cedar-parent` picks up the parent's old
+managed versions and plugin configuration, which fails silently rather than loudly (see the
+stale-parent gotcha above). When bumping a dependency or changing shared build configuration, always
+install `cedar-parent` first, then the libraries, then rebuild consumers.
+
+When invoking Maven directly, never pipe its output through a reader that can close early (`head`,
+`grep -m`). A closing reader sends SIGPIPE to `mvn`, which can end the reactor early while the shell
+reports success. Redirect the full log to a file and grep the file.
+
+Packaging is centrally managed. The shade plugin configuration lives once in `cedar-parent`'s
+`pluginManagement` as the `cedar-shade` execution, guarded by the `cedar.shade.phase` property
+("none" by default). A server opts in by setting two properties in its application pom:
+
+```xml
+<cedar.shade.phase>package</cedar.shade.phase>
+<cedar.shade.main.class>org.metadatacenter.cedar.<name>.<Name>ServerApplication</cedar.shade.main.class>
+```
+
+A packaging change is therefore a one-line edit in `cedar-parent`, not fifteen edits. To verify a
+shaded jar is sound: it holds exactly one merged `META-INF/.../Log4j2Plugins.dat` (~22 KB, not the
+~700-byte single-artifact version), a `Main-Class` in its manifest, and `java -jar <jar>` boots with
+no `StatusLogger` "Unrecognized format specifier" errors.
+
+## Testing CEDAR
+
+Every server's test suite runs backend-free: no live Keycloak, Neo4j, Mongo, MySQL, or Redis. The
+shared `cedar-microservice-libraries/cedar-test-support-library` supplies in-memory authentication
+(`TestAuthUtil` / `InMemoryUserService`, exercising the real API-key path) and embedded backends
+(in-process Neo4j via neo4j-harness, Mongo via Flapdoodle, MariaDB via MariaDB4j standing in for
+MySQL). Two suites still need something external: terminology's BioPortal resource tests hit live
+BioPortal (they are disabled or fail without a key), and the bridge server's DataCite and CompTox
+tests need the live stack.
+
+Test servers boot on the alternate `19xxx` port range (test port = dev port + 10000), so a running
+dev stack and a test run coexist. Redirection goes through `CedarEnvironmentSource.setOverride(map)`,
+a process-global test override read by the whole config layer. This replaced an earlier reflection
+hack (`TestUtil.setEnv`, now deleted) that rewrote the real process environment and failed silently
+without `--add-opens` flags. Because `CedarConfig` is injectable and rebuilds when the override
+changes, surefire runs `reuseForks=true` (test classes share a JVM) with no `--add-opens` argLine.
+
+The suites are JUnit 5. Booted-application tests use `io.dropwizard.testing.DropwizardTestSupport`
+started in a static `@BeforeAll` and stopped in `@AfterAll`. Do not use the JUnit 5
+`DropwizardAppExtension`: its version bundled with Dropwizard 2.1 is binary-incompatible with the
+current JUnit platform.
+
+Rough suite sizes: artifact 1279 (parameterized CRUD over four artifact types on embedded Mongo),
+artifact-library 687, model-validation 210, terminology ~130 (13 need live BioPortal), resource 52,
+microservice-libraries 16 (the workspace-graph permission and Cypher tests), and a two-to-three-test
+boot-and-config tier on the thin servers. Known exceptions: the submission server's suite hangs at
+teardown (its NCBI queue enqueues a stop message to Redis on shutdown), so package it with
+`-DskipTests`.
+
+The verification discipline that matters: **the suites verify logic; a redeploy plus the `ops/e2e`
+smoke test verifies reality.** The suites cannot see the live inter-service proxy round-trip or the
+real validation path. Two dependency migrations this stack went through (Apache HttpClient 4 to 5,
+and the JSON Schema validator swap) passed every suite yet had real runtime defects that only a
+redeploy and smoke run caught. After any change touching inter-service HTTP, validation, or startup
+wiring: rebuild, redeploy, and run `ops/e2e` before trusting green suites.
+
+## Dependency and Framework State
+
+Two things are locked and must not move: **Java 17**, and the **persistence and infrastructure
+server versions** (Mongo, MySQL, Neo4j, Redis, OpenSearch, Keycloak). Client libraries that talk to
+those servers may move; the servers themselves may not.
+
+Current framework baseline (all javax-namespace, all on Java 17): Dropwizard 2.1.12, Jetty 9.4,
+Jersey 2.39, Hibernate 5.6, jackson 2.17. Recently modernized client libraries: jedis 5.2, Apache
+HttpClient 5 (the exceptions are the OpenSearch low-level REST client and the Keycloak event
+listener, which stay on HttpClient 4 because those external APIs require v4 types), slf4j 1.7.36 with
+logback 1.2.13, swagger 1.6, mysql-connector 8.0.33, log4j 2.24, commons-lang3.
+
+JSON Schema validation uses the maintained networknt validator, not the abandoned java-json-tools
+(FGE) fork. networknt's built-in `uri` and `date-time` formats are stricter than FGE's and would
+reject valid CEDAR data (relative `@id` references, colon-less timezone offsets), so
+`cedar-model-validation-library`'s `FgeCompatFormats` registers FGE-equivalent format checkers on the
+Draft-04 meta-schema to preserve the exact accept boundary. FGE remains only in
+`cedar-valuerecommender-server-core`'s rule-generation subsystem.
+
+The **jakarta namespace migration (Dropwizard 4) is not done.** It is a defined next step, runnable
+on Java 17 (Dropwizard 4, Jetty 12, Jersey 3.1, and Hibernate 6 all support 17). Its one hard
+blocker is `dropwizard-sundial`, which has no Dropwizard 4 release: the worker server's scheduler
+must be vendored, forked, or replaced (with `dropwizard-jobs` or a plain `ScheduledExecutorService`)
+before the jump can compile. The rest is a large but mostly mechanical namespace flip plus four known
+risk points: the Jetty 12 CORS filter rewrite, the reflective `@Context`-injection feature, the
+Hibernate 6 data layer, and `commons-fileupload` to its jakarta successor.
 
 ## `ops/cedar_ontology_usage.py`
 
